# task-5-create-the-python-package

./: .gitignore  README.md  __init__.py  collect_framework.py  pyproject.toml  task_4.py
packaging_CLI/: README.md  pyproject.toml
packaging_CLI/src/unique_characters_counter_Barvynska/: collect_framework.py
packaging_CLI/src/unique_characters_counter_Barvynska/task_number_4/: collect_framework.py
src/unique_characters_counter_Barvynska/: __init__.py  collect_framework.py  task_4.py
